package message;

import "msg_id.proto";

option optimize_for = LITE_RUNTIME;
option java_package = "com.minaprotobuf.protos";
option java_outer_classname = "Message";

message MessageRequest {
    required MsgID  msgID    	 = 1;
	required uint64 protosBytes  = 2;
}

message MessageResponse {
    required MsgID      msgID          = 1;
    required uint64 protosBytes        = 2;
}